--- a/public/style.css
+++ b/public/style.css
@@ -53,11 +53,11 @@ nav .bx{
         padding: 0px;
     }
    html{
-        background-color: #1F2022;
+        background-color: #0a0a0a;
         overflow-x: hidden;
     }
     body{
-        background-color: #1F2022;
+        background-color: #0a0a0a;
         position: relative;
         overflow-x: hidden;
     }
@@ -333,7 +333,7 @@ nav img{
 }
 .nasePrednosti{
     height: 50vh;
-    background-color:#1F2022;
+    background-color:#0a0a0a;
     width: 100%;
     margin: auto;
     text-align: center;
@@ -380,7 +380,7 @@ nav img{
 
 /*TRECI SECTION*/
 .obavjestenja {
-    background-color:#1F2022;
+    background-color: #0a0a0a;
     display: flex;
     padding: 3rem;
     overflow-x:hidden;
@@ -541,7 +541,7 @@ nav img{
 .kontakt{
     width: 100%;
     height: 100vh;
-    background-color: #1F2022;
+    background-color: #0a0a0a;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -676,7 +676,7 @@ nav img{
 
 /* PETI SECTION */
 .generalSponsor{
-    background-color: #1F2022;
+    background-color: #0a0a0a;
     align-items: center;
     justify-content: center;
     place-items: center;
@@ -904,7 +904,7 @@ hr{
 }
 .kolonaLokacije {
     height: 50vh;
-    background-color:#1F2022;
+    background-color:#0a0a0a;
     width: 100%;
     margin: auto;
     text-align: center;
@@ -1123,7 +1123,7 @@ hr{
     }
 }
 .zakonPDF{
-    background-color: #1F2022;
+    background-color: #0a0a0a;
 }
 
 .zakonPDF h1{
@@ -1182,7 +1182,7 @@ hr{
 
 /* KONTAKT.HTML */
 .kontaktHeaderSection{
-    background-color: #1F2022;
+    background-color: #0a0a0a;
     background-size: cover;
     background-position: center;
     text-align: center;
@@ -1210,7 +1210,7 @@ hr{
     }
 }
 .kontaktForm{
-    background: #1F2022;
+    background: #0a0a0a;
     font-size: 12px;
 }
 .pozadina {
@@ -1371,14 +1371,14 @@ hr{
 
 /* CJENOVNIK.HTML */
 .cjenovnikHeaderSection {
-    background-color: #1F2022;
+    background-color: #0a0a0a;
     background-position: center;
     text-align: center;
     justify-content: center;
     align-items: center;
 }
 .cjenovnikBody{
-    background-color: #1F2022;
+    background-color: #0a0a0a;
 }
 .cjenovnikTable{
     margin-top: 20vh;
